zerocopy-derive/tests/ui-msrv/derive_transparent.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::TryFromBytes` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/../include.rs:74:17
   |
74 |                 assert_impl_all::<$type>();
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::TryFromBytes` is not implemented for `NotZerocopy`
   |
  ::: /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:34:1
   |
34 | util_assert_impl_all!(TransparentStruct<NotZerocopy>: TryFromBytes);
   | -------------------------------------------------------------------- in this macro invocation
   |
note: required because of the requirements on the impl of `zerocopy::TryFromBytes` for `TransparentStruct<NotZerocopy>`
  --> /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:24:21
   |
24 | #[derive(IntoBytes, FromBytes, Unaligned)]
   |                     ^^^^^^^^^
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> /zerocopy-derive/tests/ui-msrv/../include.rs:73:50
   |
73 |                 fn assert_impl_all<T: ?Sized $(+ $trait)*>() {}
   |                                                  ^^^^^^ required by this bound in `_::{closure#0}::assert_impl_all`
   |
  ::: /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:34:1
   |
34 | util_assert_impl_all!(TransparentStruct<NotZerocopy>: TryFromBytes);
   | -------------------------------------------------------------------- in this macro invocation
   = note: this error originates in the macro `util_assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromZeros` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/../include.rs:74:17
   |
74 |                 assert_impl_all::<$type>();
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromZeros` is not implemented for `NotZerocopy`
   |
  ::: /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:35:1
   |
35 | util_assert_impl_all!(TransparentStruct<NotZerocopy>: FromZeros);
   | ----------------------------------------------------------------- in this macro invocation
   |
note: required because of the requirements on the impl of `FromZeros` for `TransparentStruct<NotZerocopy>`
  --> /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:24:21
   |
24 | #[derive(IntoBytes, FromBytes, Unaligned)]
   |                     ^^^^^^^^^
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> /zerocopy-derive/tests/ui-msrv/../include.rs:73:50
   |
73 |                 fn assert_impl_all<T: ?Sized $(+ $trait)*>() {}
   |                                                  ^^^^^^ required by this bound in `_::{closure#0}::assert_impl_all`
   |
  ::: /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:35:1
   |
35 | util_assert_impl_all!(TransparentStruct<NotZerocopy>: FromZeros);
   | ----------------------------------------------------------------- in this macro invocation
   = note: this error originates in the macro `util_assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: zerocopy::FromBytes` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/../include.rs:74:17
   |
74 |                 assert_impl_all::<$type>();
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::FromBytes` is not implemented for `NotZerocopy`
   |
  ::: /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:36:1
   |
36 | util_assert_impl_all!(TransparentStruct<NotZerocopy>: FromBytes);
   | ----------------------------------------------------------------- in this macro invocation
   |
note: required because of the requirements on the impl of `zerocopy::FromBytes` for `TransparentStruct<NotZerocopy>`
  --> /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:24:21
   |
24 | #[derive(IntoBytes, FromBytes, Unaligned)]
   |                     ^^^^^^^^^
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> /zerocopy-derive/tests/ui-msrv/../include.rs:73:50
   |
73 |                 fn assert_impl_all<T: ?Sized $(+ $trait)*>() {}
   |                                                  ^^^^^^ required by this bound in `_::{closure#0}::assert_impl_all`
   |
  ::: /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:36:1
   |
36 | util_assert_impl_all!(TransparentStruct<NotZerocopy>: FromBytes);
   | ----------------------------------------------------------------- in this macro invocation
   = note: this error originates in the macro `util_assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: zerocopy::IntoBytes` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/../include.rs:74:17
   |
74 |                 assert_impl_all::<$type>();
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `NotZerocopy`
   |
  ::: /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:37:1
   |
37 | util_assert_impl_all!(TransparentStruct<NotZerocopy>: IntoBytes);
   | ----------------------------------------------------------------- in this macro invocation
   |
note: required because of the requirements on the impl of `zerocopy::IntoBytes` for `TransparentStruct<NotZerocopy>`
  --> /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:24:10
   |
24 | #[derive(IntoBytes, FromBytes, Unaligned)]
   |          ^^^^^^^^^
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> /zerocopy-derive/tests/ui-msrv/../include.rs:73:50
   |
73 |                 fn assert_impl_all<T: ?Sized $(+ $trait)*>() {}
   |                                                  ^^^^^^ required by this bound in `_::{closure#0}::assert_impl_all`
   |
  ::: /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:37:1
   |
37 | util_assert_impl_all!(TransparentStruct<NotZerocopy>: IntoBytes);
   | ----------------------------------------------------------------- in this macro invocation
   = note: this error originates in the macro `util_assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: zerocopy::Unaligned` is not satisfied
  --> /zerocopy-derive/tests/ui-msrv/../include.rs:74:17
   |
74 |                 assert_impl_all::<$type>();
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::Unaligned` is not implemented for `NotZerocopy`
   |
  ::: /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:38:1
   |
38 | util_assert_impl_all!(TransparentStruct<NotZerocopy>: Unaligned);
   | ----------------------------------------------------------------- in this macro invocation
   |
note: required because of the requirements on the impl of `zerocopy::Unaligned` for `TransparentStruct<NotZerocopy>`
  --> /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:24:32
   |
24 | #[derive(IntoBytes, FromBytes, Unaligned)]
   |                                ^^^^^^^^^
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> /zerocopy-derive/tests/ui-msrv/../include.rs:73:50
   |
73 |                 fn assert_impl_all<T: ?Sized $(+ $trait)*>() {}
   |                                                  ^^^^^^ required by this bound in `_::{closure#0}::assert_impl_all`
   |
  ::: /zerocopy-derive/tests/ui-msrv/derive_transparent.rs:38:1
   |
38 | util_assert_impl_all!(TransparentStruct<NotZerocopy>: Unaligned);
   | ----------------------------------------------------------------- in this macro invocation
   = note: this error originates in the macro `util_assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
